--- a/deploy.yaml
+++ b/deploy.yaml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: todo
-        image: harshalb/todo-app:v1
+        image: harshalb/cicd-e2e:v1
         ports:
         - containerPort: 8000
